feat: add complete installation wizard with 4-step setup
- Creates database tables from schema.sql

- Generates secure config.php with random APP_SECRET_KEY

- Creates default admin account with setup_completed=0

- Adds requirements check and database connection testing

- Creates installation lock file to prevent reinstallation

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@ Thumbs.db
 
 # Logs
 *.log
+
+# Upload directories - keep empty but don't commit contents
+/temp_uploads/*
+!/temp_uploads/.gitkeep
+
+# Installation lock file
+/includes/installed.lock
+
+# Auto-generated email config
+/includes/email_config.php
